[package]
name = "native"
version = "0.1.0"
authors = ["Alexandre Frigon <alexandre.frigon.1@gmail.com>"]
edition = "2018"

[lib]
name="elios"
crate-type = ["cdylib"]

[dependencies]
acproto = { git = "https://github.com/afrigon/acproto", branch = "main" }
rust_gpiozero = "0.2.0"
nodejs-sys = "0.2.0"
